crawl.css, crawl.html, javascript/ - Move player and board into classes. Move jquery into lib folder.

--- a/crawl.html
+++ b/crawl.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="crawl.css">
   </head>
   <body>
-    <script src="javascript/jquery-3.7.1.js"></script>
+    <script src="javascript/lib/jquery-3.7.1.js"></script>
+    <script src="javascript/Board.js"></script>
+    <script src="javascript/Player.js"></script>
 	<script src="javascript/crawl.js"></script>
+  
+
     <div id="board" tabindex="0"></div>
     <div id = "resources">
         <div id = "stamina-bar">
