crawl.html, javascript/EntityManager.js. javascript/crawl.js - move code into EntityManager class

--- a/crawl.html
+++ b/crawl.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
+    <script src="javascript/EntityManager.js"></script>
     <script src="javascript/Board.js"></script>
     <script src="javascript/Player.js"></script>
 	<script src="javascript/crawl.js"></script>
