move player into entitymanager, add ratnest, add instructions

--- a/crawl.html
+++ b/crawl.html
@@ -25,6 +25,24 @@
             <div id = "health-level"></div>
         </div>
     </div>
+    <div id = 'instructions-div'>
+        Welcome to crawlJS!
+        use the numpad to move - you can move up, down, left, right, or diagonally.
+        use Q and W to rotate your sword clockwise or counter-clockwise.
+        The play area must be selected for the controls to work.
+        <br><br>
+        Fight monsters by navigating your sword onto them. If there is room, you will knock backwards and may stun them.
+        Stunned enemies appear in lower case and are easier to kill.
+        <br><br>
+        Striking an enemy costs STAMINA. Try not to run out - doing so can cost you a turn.
+        Take a turn off to regain stamina by pressing '5'
+        <br><br>
+        Some enemies may become more aggressive when harmed... 
+        Some enemies are more predictable than others... 
+        <br><br>
+        If you make a mistake, press BACKSPACE to undo an aciton. You can travel up to 10 turns into the past in this way.
+
+    </div>
     <div id = "controls">
         <div id="weapon-select-div">
             <label for="weapon-select">Weapon select</laabel>
