improve logs, update custom spawner

--- a/crawl.html
+++ b/crawl.html
@@ -57,15 +57,19 @@
             <select name="weapon-select" id="weapon-select"></select>
         </div>
         <div id="enemy-control-div">
-            <label for="enemy-x-input">x: </label>
-            <input id="enemy-x-input">
-            <label for="enemy-y-input">y: </label>
-            <input id="enemy-y-input">
-            <label for="enemy-hp-input">hp: </label>
-            <input id="enemy-hp-input">
-            <button id="enemy-spawn-button">Spawn</button>
+            <div id="custom enemy spawn">
+                Custom Enemy Spawner:
+                <label for="enemy-x-input">x: </label>
+                <input id="enemy-x-input">
+                <label for="enemy-y-input">y: </label>
+                <input id="enemy-y-input">
+                <label for="enemy-hp-input">hp: </label>
+                <input id="enemy-hp-input">
+                <label for="enemy-damage-input">damage: </label>
+                <input id="enemy-damage-input">
+                <button id="custom-enemy-spawn-button">Spawn</button>
+            </div>
             <br>
-            <button id="clear-corpses">Clear Corpses</button>
         </div>
     </div>
   </body>
