--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -12,35 +12,88 @@
     <script src="javascript/EntityManager.js"></script>
     <script src="javascript/Board.js"></script>
     <script src="javascript/Player.js"></script>
+    <script src="javascript/Log.js"></script>
 	<script src="javascript/crawl.js"></script>
-  
-
-    <div id="board" tabindex="0"></div>
     <div id = "resources">
-        <div id = "stamina-bar">
-            <div id = "stamina-level"></div>
-        </div>
-        <br>
         <div id = "health-bar">
             <div id = "health-level"></div>
         </div>
+        <div id = "stamina-bar">
+            <div id = "stamina-level"></div>
+        </div>
+    </div>
+    <div id="game-window">
+        <div>
+            <div id="board" tabindex="0"></div> 
+        </div>
+        <div id="log-window">
+            <div id="log-title">Log</div>
+            <div id="log"></div>
+        </div>
+    </div>
+    <div id="reminder-wrapper">
+        <div id="focus-reminder">Click on the game window for controls to register!</div>
     </div>
     <div id = "controls">
         <div id="weapon-select-div">
-            <label for="weapon-select">Weapon select</laabel>
+            <label for="weapon-select">Weapon select</label>
             <select name="weapon-select" id="weapon-select"></select>
         </div>
-        <div id="enemy-control-div">
-            <label for="enemy-x-input">x: </label>
-            <input id="enemy-x-input">
-            <label for="enemy-y-input">y: </label>
-            <input id="enemy-y-input">
-            <label for="enemy-hp-input">hp: </label>
-            <input id="enemy-hp-input">
-            <button id="enemy-spawn-button">Spawn</button>
-            <br>
-            <button id="clear-corpses">Clear Corpses</button>
+        <div id="map-select-div">
+            <label for="map-select">Map select</label>
+            <select name="map-select" id="map-select">
+                <option>Choose a map</option>
+            </select>
         </div>
+        <div id="enemy-control-div">
+            <div id="enemy-spawn">
+                Spawn Enemy:
+                <label for="enemy-x-input">x: </label>
+                <input id="enemy-x-input">
+                <label for="enemy-y-input">y: </label>
+                <input id="enemy-y-input">
+                <select name="enemy-select" id="enemy-select"></select>
+                <button id="enemy-spawn-button">Spawn</button>
+            </div>
+            <div id="custom-enemy-spawn">
+                Spawn Custom Enemy:
+                <label for="custom-enemy-x-input">x: </label>
+                <input id="custom-enemy-x-input">
+                <label for="custom-enemy-y-input">y: </label>
+                <input id="custom-enemy-y-input">
+                <label for="enemy-hp-input">hp: </label>
+                <input id="enemy-hp-input">
+                <label for="enemy-damage-input">damage: </label>
+                <input id="enemy-damage-input">
+                <button id="custom-enemy-spawn-button">Spawn</button>
+            </div>
+            <br>
+            
+        </div>
+    </div>
+    <div id = 'instructions-div'>
+        Welcome to crawlJS! (real name tbd...?)
+        use the numpad to move - you can move up, down, left, right, or diagonally.
+        use Q and W to rotate your sword clockwise or counter-clockwise.
+        The play area must be selected for the controls to work.
+        <br><br>
+        Fight monsters by navigating your sword onto them. If there is room, you will knock them backwards and may stun them.
+        Stunned enemies appear in lower case and are easier to kill.
+        <br><br>
+        Striking an enemy costs STAMINA. Try not to run out - doing so can cost you a turn.
+        Take a turn off to regain stamina by pressing '5'
+        <br><br>
+        Some enemies may become more aggressive when harmed... 
+        Some enemies are more predictable than others... 
+        <br><br>
+        If you make a mistake, press BACKSPACE to undo an aciton. You can travel up to 10 turns into the past in this way.
+        <br><br>
+        Larger weapons do more damage, but cost more stamina to attack with.
+        Blunt weapons do less damage but are more likely to stun.
+        <br><br>
+        select a map above to begin.
+
+
     </div>
   </body>
 </html>
