add gamemaster class

--- a/crawl.html
+++ b/crawl.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
+    <script src="javascript/GameMaster.js"></script>
     <script src="javascript/EntityManager.js"></script>
     <script src="javascript/Board.js"></script>
     <script src="javascript/Player.js"></script>
     <script src="javascript/Log.js"></script>
+    <script src="javascript/Display.js"></script>
 	<script src="javascript/crawl.js"></script>
     <div id = "resources">
         <div id = "health-bar">
