--- a/crawl.html
+++ b/crawl.html
@@ -20,6 +20,8 @@
     <div id ='home-screen'>
         <div id="save-manage-div">
             <button id="new-save-button">New Save</button>
+            <input type="file" id="load-file-input" />
+            <button id="download-save-button">Download Save</button>  
         </div>
         <div id="map-select-div">
             <label for="map-select">Map select</label>
