add barebones town screen

--- a/crawl.html
+++ b/crawl.html
@@ -22,6 +22,10 @@
             <button id="new-save-button">New Save</button>
             <input type="file" id="load-file-input" />
         </div>
+    </div>
+    <button id="download-save-button">Download Save</button>  
+    <div id="town-screen">
+        You are in town.
         <div id="map-select-div">
             <label for="map-select">Map select</label>
             <select name="map-select" id="map-select">
@@ -29,7 +33,6 @@
             </select>
         </div>
     </div>
-    <button id="download-save-button">Download Save</button>  
     <div id="dungeon-screen">
         <div id = "resources">
             <div id = "health-bar">
