can equip weapons through inventory

--- a/crawl.html
+++ b/crawl.html
@@ -58,7 +58,8 @@
         <div id = "inventory-wrapper">
             Inventory
             <div id="inventory">
-
+                <div id ="inventory-list"></div>
+                <div id ="inventory-description"></div>
             </div>
         </div>
         
