--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
+    <script src="javascript/vars/ItemVars.js"></script>
     <script src="javascript/Save.js"></script>
     <script src="javascript/GameMaster.js"></script>
     <script src="javascript/EntityManager.js"></script>
@@ -51,8 +52,12 @@
                 <div id="log"></div>
             </div>
         </div>
-        <div id="reminder-wrapper">
-            <div id="focus-reminder">Click on the game window for controls to register!</div>
+        <div id = "inventory-wrapper">
+            Inventory
+            <div id="inventory">
+                <div id ="inventory-list"></div>
+                <div id ="inventory-description"></div>
+            </div>
         </div>
         
         <div id = "controls">
