--- a/crawl.html
+++ b/crawl.html
@@ -10,6 +10,7 @@
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
     <script src="javascript/vars/ItemVars.js"></script>
+    <script src="javascript/vars/MonsterVars.js"></script>
     <script src="javascript/Save.js"></script>
     <script src="javascript/GameMaster.js"></script>
     <script src="javascript/EntityManager.js"></script>
