--- a/crawl.html
+++ b/crawl.html
@@ -11,6 +11,7 @@
     <script src="javascript/lib/jquery-3.7.1.js"></script>
     <script src="javascript/vars/ItemVars.js"></script>
     <script src="javascript/vars/MonsterVars.js"></script>
+    <script src="javascript/LootManager.js"></script>
     <script src="javascript/Save.js"></script>
     <script src="javascript/GameMaster.js"></script>
     <script src="javascript/EntityManager.js"></script>
