add day tracker

--- a/crawl.html
+++ b/crawl.html
@@ -30,6 +30,7 @@
     <button id="download-save-button">Download Save</button>  
     <div id="town-screen">
         You are in town.
+        <div id="day-div"></div>
         <div id="map-select-div">
             <label for="map-select">Map select</label>
             <select name="map-select" id="map-select">
