--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -116,26 +116,26 @@
     
     
     <div id = 'instructions-div'>
-        Welcome to crawlJS! (real name tbd...?)
+        Welcome to crawlJS! (thinking of another name....)
         use the numpad to move - you can move up, down, left, right, or diagonally.
-        use Q and W to rotate your sword clockwise or counter-clockwise.
-        The play area must be selected for the controls to work.
+        use Q and W (or the / and * on the numpad for one-handed play) to rotate your weapon clockwise or counter-clockwise.
         <br><br>
-        Fight monsters by navigating your sword onto them. If there is room, you will knock them backwards and may stun them.
-        Stunned enemies appear in lower case and are easier to kill.
+        Fight monsters by navigating your weapon onto them. If there is room, you will knock them backwards and may stun them.
+        Stunned enemies appear in lower case and take double damage. Many weapons deal different damage and stun depending on the type of strike - a SWING is when you hit an enemy by rotating your weapon. a JAB is when you advance on an enemy, thrusting your weapon into them.
         <br><br>
-        Striking an enemy costs STAMINA. Try not to run out - doing so can cost you a turn.
-        Take a turn off to regain stamina by pressing '5'
+        Striking an enemy costs STAMINA. Try not to run out!
+        Enemies can be blocked by placing your weapon in their way, but doing so causes them to damage your stamina. If you run out, they will knock your weapon aside and advance on you. (some enemies can do this even if your stamina is full... watch out!)
+        Take a turn off to regain stamina by pressing '5'. Stamina gain is affected by your hunger level.
         <br><br>
-        Some enemies may become more aggressive when harmed... 
-        Some enemies are more predictable than others... 
+        Luck can be used to undo an action by pressing BACKSPACE. this is a valuable resource! Use luck to undo a mistake, or to "reroll" an action with undesirable results (such as an attack that causes your weapon to break).
         <br><br>
-        If you make a mistake, press BACKSPACE to undo an aciton. You can travel up to 10 turns into the past in this way.
+        As days pass, luck and health will regenerate and nourishment will deplete. You may REST to pass a day without venturing into the dungeon.
         <br><br>
-        Larger weapons do more damage, but cost more stamina to attack with.
-        Blunt weapons do less damage but are more likely to stun.
+        resources can be gained by finding treasure in the dungeon and selling it in town. Make sure to keep your lantern full of oil and your stomach full of food, as a top priority.
         <br><br>
-        select a map above to begin.
+        when in town, choose a map from the map select dropdown to venture off. Currently, the only dungeon is labeled "cave".
+        <br><br>
+        click 'new save' to begin
 
 
     </div>
