--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -133,6 +133,8 @@
         <br><br>
         resources can be gained by finding treasure in the dungeon and selling it in town. Make sure to keep your lantern full of oil and your stomach full of food, as a top priority.
         <br><br>
+        items are represented by asterisks and can be collected by walking over them. Dead bodies and chests can be looted by pushing against them (or by smashing them). Items in your inventory can be used by pressing the numeral key corresponding to their slot (on the number bar, not the numpad). Items can be dropped by pressing the D key before pressing the corresponding number. Your tenth slot is currently inacessible, because there is no 10 key on the keyboard. Woops.
+        <br><br>
         when in town, choose a map from the map select dropdown to venture off. Currently, the only dungeon is labeled "cave".
         <br><br>
         click 'new save' to begin
