--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/dungeon.css">
     <link rel="stylesheet" href="css/hud.css">
     <link rel="stylesheet" href="css/inventory.css">
+    <link rel="stylesheet" href="css/town.css">
+
   </head>
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
