--- a/crawl.html
+++ b/crawl.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/hud.css">
     <link rel="stylesheet" href="css/inventory.css">
     <link rel="stylesheet" href="css/town.css">
+    <link rel="stylesheet" href="css/log.css">
+
 
   </head>
   <body>
