--- a/crawlJS/crawl.html
+++ b/crawlJS/crawl.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="css/hud.css">
     <link rel="stylesheet" href="css/inventory.css">
     <link rel="stylesheet" href="css/town.css">
+    <link rel="stylesheet" href="css/log.css">
+
 
   </head>
   <body>
     <script src="javascript/lib/jquery-3.7.1.js"></script>
     <script src="javascript/vars/ItemVars.js"></script>
     <script src="javascript/vars/MonsterVars.js"></script>
+    <script src="javascript/vars/keywordVars.js"></script>
+
     <script src="javascript/LootManager.js"></script>
     <script src="javascript/Shop.js"></script>
     <script src="javascript/Save.js"></script>
@@ -112,6 +116,7 @@
                 <div id="log"></div>
             </div>
         </div>
+        <div class="hint-divs"></div>
         <div id = "dungeon-inventory-wrapper" class="inventory-wrapper">
             <div class="inventory-title">Inventory</div>
             <div id="dungeon-inventory" class="inventory">
