--- a/crawl.html
+++ b/crawl.html
@@ -160,8 +160,16 @@
         when in town, choose a map from the map select dropdown to venture off. Currently, the only dungeon is labeled "cave".
         <br><br>
         click 'new save' to begin
+    </div>
 
-
+    <div id="custom-controls-div">
+        enter custom controls:
+        <br>
+        <input id="upleft-input" class="control-inputs"><input id="up-input" class="control-inputs"><input id="upright-input" class="control-inputs">
+        <br>
+        <input id="left-input" class="control-inputs"><input id="wait-input" class="control-inputs"><input id="right-input" class="control-inputs">
+        <br>
+        <input id="downleft-input" class="control-inputs"><input id="down-input" class="control-inputs"><input id="downright-input" class="control-inputs">
     </div>
   </body>
 </html>
